sandbox/output
Hiker.java:6: error: <identifier> expected
        for (String[] rs = args.split(","), int i=0; i< rs.length; i++) {
                                           ^
Hiker.java:6: error: not a statement
        for (String[] rs = args.split(","), int i=0; i< rs.length; i++) {
                                                      ^
Hiker.java:6: error: ')' expected
        for (String[] rs = args.split(","), int i=0; i< rs.length; i++) {
                                                                 ^
Hiker.java:6: error: ';' expected
        for (String[] rs = args.split(","), int i=0; i< rs.length; i++) {
                                                                      ^
4 errors
